# routes/api.php
@@ -29,14 +29,17 @@ Route::get('/products/{id}', [ProductController::class, 'show']);
 
 // Category Routes
 Route::get('/categories', [CategoryController::class, 'index']);
-Route::get('/categories/{category}', [CategoryController::class, 'findProductsByCategory']);
+Route::get('/categories/{id}', [CategoryController::class, 'show']);
+Route::get('/categories/{category}/products', [CategoryController::class, 'findProductsByCategory']);
 
 // Order Routes
 Route::delete('/orders/{id}', [OrderController::class, 'destroy']);
 Route::get('/orders', [OrderController::class, 'index']);
 Route::get('/orders/{id}', [OrderController::class, 'show']);
+Route::put('/orders/{id}/change-status', [OrderController::class, 'updateStatus']);
 Route::post('/orders', [OrderController::class, 'store']);
 
 // Table Routes
 Route::get('/tables', [TableController::class, 'index']);
+Route::get('/tables/{id}', [TableController::class, 'show']);
 Route::get('/tables/{id}/orders', [TableController::class, 'getOrdersForTable']);
